Fix visibility of the book navigation inside the article content
[3.2]

ERM19793

--- a/resources/bluespice.bookshelf.css
+++ b/resources/bluespice.bookshelf.css
@@ -9,6 +9,7 @@
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	background-color: #ddd;
+	display: none;
 }
 
 .bs-bookshelf-no-icon {
